tests-integration/tests/roundtrip/invalid/semantic/typecheck/record_var_in_list_combining_expr/input.essence
find t : record { a : int(1..10), b : int(1..10) }
such that sum(t) = 5